--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3772,3 +3772,60 @@ representantes.info.inicial.opain= Medios Magnéticos OPAIN
 representantes.info.inicial.vehicular= Medios Magnéticos Vehicular
 representantes.info.inicial.ica= Medios Magnéticos ICA
 
+representantes.info.predial.titulo= Carga de archivos
+representantes.info.predial.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
+representantes.info.predial.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
+representantes.info.predial.numero= #
+representantes.info.predial.descripcion= Descripción
+representantes.info.predial.detalle= Detalle
+representantes.info.predial.seleccionar= Selecciona el archivo
+representantes.info.predial.resolucion= Resolución No. DDI-041433
+representantes.info.predial.articulo1= Artículo 1
+representantes.info.predial.articulo2= Artículo 2
+representantes.info.predial.articulo3= Artículo 3
+representantes.info.predial.articulo4= Artículo 4
+representantes.info.predial.articulo5= Artículo 5
+representantes.info.predial.articulo7= Artículo 7
+representantes.info.predial.articulo8= Artículo 8
+representantes.info.predial.articulo9= Artículo 9
+representantes.info.predial.articulo10= Artículo 10
+representantes.info.predial.articulo11= Artículo 11
+representantes.info.predial.articulo12= Artículo 12
+representantes.info.predial.articulo13= Artículo 13
+representantes.info.predial.regresar= Regresar
+representantes.info.predial.cancelar= Cancelar
+representantes.info.predial.enviar= Enviar
+
+representantes.info.opain.titulo= Carga de archivos
+representantes.info.opain.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
+representantes.info.opain.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
+representantes.info.opain.numero= #
+representantes.info.opain.descripcion= Descripción
+representantes.info.opain.detalle= Detalle
+representantes.info.opain.seleccionar= Selecciona el archivo
+representantes.info.opain.resolucion= Resolución No.  DDI-042974
+representantes.info.opain.articulo1= Artículo 1
+representantes.info.opain.articulo2= Artículo 2
+representantes.info.opain.regresar= Regresar
+representantes.info.opain.cancelar= Cancelar
+representantes.info.opain.enviar= Enviar
+
+representantes.info.ica.titulo= Carga de archivos
+representantes.info.ica.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
+representantes.info.ica.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
+representantes.info.ica.numero= #
+representantes.info.ica.descripcion= Descripción
+representantes.info.ica.detalle= Detalle
+representantes.info.ica.seleccionar= Selecciona el archivo
+representantes.info.ica.resolucion= Resolución No. DDI-040106
+representantes.info.ica.articulo1= Artículo 1
+representantes.info.ica.articulo2= Artículo 2
+representantes.info.ica.articulo3= Artículo 3
+representantes.info.ica.articulo4= Artículo 4
+representantes.info.ica.articulo5= Artículo 5
+representantes.info.ica.articulo7= Artículo 7
+representantes.info.ica.articulo8= Artículo 8
+representantes.info.ica.articulo9= Artículo 9
+representantes.info.ica.regresar= Regresar
+representantes.info.ica.cancelar= Cancelar
+representantes.info.ica.enviar= Enviar
