Se agregan micro servicios para actualizar mi rit y se realiza cambio para identidicar vallas de acuerdo al catalogo de codigos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1837,6 +1837,7 @@ mirit.personalData.documentNumber=Número de documento
 mirit.personalData.secondFirstName=Segundo Nombre
 mirit.personalData.secondLasName=Segundo Apellido
 mirit.personalData.updateName=Actualizar Nombre
+mirit.personalData.certifName=Certificar Nombre
 
 mirit.generalData.title=Mis datos generales Persona Natural
 mirit.generalData.treatment=Tratamiento
@@ -1866,8 +1867,12 @@ mirit.contactData.selectRequieredFields=Para adicionar más datos a tu direcció
 mirit.contactData.acept=Agregar Complemento
 mirit.contactData.cancel=Cancelar
 mirit.contactData.addAddress=Confirmar
-mirit.contactData.editarAddress=Editar Dirección
+mirit.contactData.editarAddress=Editar Direcciones
+mirit.contactData.updateNotificationAddress=Actualizar dirección de notificación
+mirit.contactData.updateContactAddress=Actualizar dirección de contacto
 mirit.contactData.addSocialNetwork= Agregar red social
+mirit.contactData.updateRedesSociales= Actualizar redes sociales
+mirit.contactData.updateTelefono= Actualizar telefono
 mirit.contactData.updateEmail= Actualizar Email
 mirit.contactData.updatePassword= Actualizar Contraseña
 mirit.contactData.updateAutorizaciones= Actualizar Autorizaciones
