Ajustes en Breadcrumbs

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -562,6 +562,13 @@ breadcrumb.home=Inicio
 breadcrumb.login=Inicio de sesión
 breadcrumb.not.found=Página no encontrada
 
+#->INI dev-eduardo Pantalla de menu MiRIT->Certificacion 19/01/2019
+breadcrumb.miRIT=Mi RIT
+breadcrumb.certificacion=Certificación RIT
+breadcrumb.publicidad=Publicidad Exterior
+#->FIN dev-eduardo Pantalla de menu MiRIT->Certificacion 19/01/2019
+
+
 cart.page.shop=Tienda
 cart.product.configuration.toolong=El valor es demasiado largo
 cart.checkout.error=Error al ir al cierre de compra.
