--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3780,7 +3780,7 @@ representantes.info.inicial.opain= Medios Magnéticos OPAIN
 representantes.info.inicial.vehicular= Medios Magnéticos Vehicular
 representantes.info.inicial.ica= Medios Magnéticos ICA
 
-representantes.info.predial.titulo= Carga de archivos
+representantes.info.predial.titulo= Carga de archivos Predial
 representantes.info.predial.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
 representantes.info.predial.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
 representantes.info.predial.numero= #
@@ -3804,7 +3804,7 @@ representantes.info.predial.regresar= Regresar
 representantes.info.predial.cancelar= Cancelar
 representantes.info.predial.enviar= Enviar
 
-representantes.info.opain.titulo= Carga de archivos
+representantes.info.opain.titulo= Carga de archivos Predial - OPAIN
 representantes.info.opain.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
 representantes.info.opain.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
 representantes.info.opain.numero= #
@@ -3818,7 +3818,7 @@ representantes.info.opain.regresar= Regresar
 representantes.info.opain.cancelar= Cancelar
 representantes.info.opain.enviar= Enviar
 
-representantes.info.ica.titulo= Carga de archivos
+representantes.info.ica.titulo= Carga de archivos ICA
 representantes.info.ica.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
 representantes.info.ica.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
 representantes.info.ica.numero= #
@@ -3837,3 +3837,54 @@ representantes.info.ica.articulo9= Artículo 9
 representantes.info.ica.regresar= Regresar
 representantes.info.ica.cancelar= Cancelar
 representantes.info.ica.enviar= Enviar
+
+representantes.info.vehiculos.titulo= Carga de archivos Vehículos
+representantes.info.vehiculos.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
+representantes.info.vehiculos.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
+representantes.info.vehiculos.numero= #
+representantes.info.vehiculos.descripcion= Descripción
+representantes.info.vehiculos.detalle= Detalle
+representantes.info.vehiculos.seleccionar= Selecciona el archivo
+representantes.info.vehiculos.resolucion= Resolución No. 
+representantes.info.vehiculos.articulo14= Artículo 14
+representantes.info.vehiculos.articulo16= Artículo 16
+representantes.info.vehiculos.articulo27= Artículo 27
+representantes.info.vehiculos.articulo31= Artículo 31
+representantes.info.vehiculos.regresar= Regresar
+representantes.info.vehiculos.cancelar= Cancelar
+representantes.info.vehiculos.enviar= Enviar
+
+representantes.info.historico.inicial.titulo= Detalle de información por vigencia reportada
+representantes.info.historico.inicial.obteninfo= Para obtener el histórico la información reportada por favor, selecciona el tipo de impuesto y año gravable que deseas consultar
+representantes.info.historico.inicial.impreportar= Impuesto
+representantes.info.historico.inicial.anigrav= Año gravable a Reportar
+representantes.info.historico.inicial.cacelar= Cancelar
+representantes.info.historico.inicial.continuar= Continuar
+
+representantes.info.historico.predial.titulo= Detalle de Carga
+representantes.info.historico.predial.descripcion= Descripción
+representantes.info.historico.predial.detalle= Detalle de carga
+representantes.info.historico.predial.edocarga= Estado de carga
+representantes.info.historico.predial.resolucion= Resolución No. DDI-041433
+representantes.info.historico.predial.articulo1= Artículo 1
+
+representantes.info.historico.opain.titulo= Detalle de Carga
+representantes.info.historico.opain.descripcion= Descripción
+representantes.info.historico.opain.detalle= Detalle de carga
+representantes.info.historico.opain.edocarga= Estado de carga
+representantes.info.historico.opain.resolucion= Resolución No. DDI-042974
+representantes.info.historico.opain.articulo1= Artículo 1
+
+representantes.info.historico.ica.titulo= Detalle de Carga
+representantes.info.historico.ica.descripcion= Descripción
+representantes.info.historico.ica.detalle= Detalle de carga
+representantes.info.historico.ica.edocarga= Estado de carga
+representantes.info.historico.ica.resolucion= Resolución No. DDI-040106
+representantes.info.historico.ica.articulo1= Artículo 1
+
+representantes.info.historico.vehiculos.titulo= Detalle de Carga
+representantes.info.historico.vehiculos.descripcion= Descripción
+representantes.info.historico.vehiculos.detalle= Detalle de carga
+representantes.info.historico.vehiculos.edocarga= Estado de carga
+representantes.info.historico.vehiculos.resolucion= Resolución No.
+representantes.info.historico.vehiculos.articulo1= Artículo 1
