--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3888,3 +3888,38 @@ representantes.info.historico.vehiculos.detalle= Detalle de carga
 representantes.info.historico.vehiculos.edocarga= Estado de carga
 representantes.info.historico.vehiculos.resolucion= Resolución No.
 representantes.info.historico.vehiculos.articulo1= Artículo 1
+
+representantes.info.sanciones.inicial.titulo= Sanciones Impuestas
+representantes.info.sanciones.inicial.obteninfo= Puedes consultar las sanciones impuestas por la Administración Distrital, en relación con el reporte de la información. Por favor selecciona el impuesto y año gravable a consultar.
+representantes.info.sanciones.inicial.impreportar= Impuesto
+representantes.info.sanciones.inicial.anigrav= Año gravable a Reportar
+representantes.info.sanciones.inicial.cacelar= Cancelar
+representantes.info.sanciones.inicial.continuar= Continuar
+
+representantes.info.sanciones.predial.objeto= Objeto de la sanción
+representantes.info.sanciones.predial.valor= Valor de la sanción
+representantes.info.sanciones.predial.visualizar= Visualizar
+representantes.info.sanciones.predial.resolucion= Resolución No. DDI-041433
+representantes.info.sanciones.predial.articulo1= Artículo 1
+representantes.info.sanciones.predial.ver= Ver detalle
+
+representantes.info.sanciones.opain.objeto= Objeto de la sanción
+representantes.info.sanciones.opain.valor= Valor de la sanción
+representantes.info.sanciones.opain.visualizar= Visualizar
+representantes.info.sanciones.opain.resolucion= Resolución No. DDI-042974
+representantes.info.sanciones.opain.articulo1= Artículo 1
+representantes.info.sanciones.opain.ver= Ver detalle
+
+representantes.info.sanciones.ica.objeto= Objeto de la sanción
+representantes.info.sanciones.ica.valor= Valor de la sanción
+representantes.info.sanciones.ica.visualizar= Visualizar
+representantes.info.sanciones.ica.resolucion= Resolución No. DDI-040106
+representantes.info.sanciones.ica.articulo1= Artículo 1
+representantes.info.sanciones.ica.ver= Ver detalle
+
+representantes.info.sanciones.vehiculos.objeto= Objeto de la sanción
+representantes.info.sanciones.vehiculos.valor= Valor de la sanción
+representantes.info.sanciones.vehiculos.visualizar= Visualizar
+representantes.info.sanciones.vehiculos.resolucion= Resolución No. DDI-040106
+representantes.info.sanciones.vehiculos.articulo1= Artículo 1
+representantes.info.sanciones.vehiculos.ver= Ver detalle
