--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_en.properties
@@ -73,8 +73,10 @@ type.Gender.FEMALE.name=Female
 
 type.Customer.documentNumber.name=Document Number
 type.Customer.documentType.name=Document Type
+type.Customer.firstName.name=First Name
 type.Customer.middleName.name=Middle Name
 type.Customer.secondLastName.name=Second Last Name
+ype.Customer.secondLastName.name=Last Name
 type.Customer.documentExpeditionDate.name=Document Expedition Name
 type.Customer.sex.name=Sex
 type.Customer.nationality.name=Nationality
@@ -84,5 +86,48 @@ type.Customer.originCountry.name=Origin Country
 type.Customer.useEmailForNotification.name=User Email For Notifications
 type.Customer.useInformationForInstitutionalPurposes.name=Use Information For Institutional Purposes.
 type.Customer.numBP.name=Num. BP
+type.Customer.sdhType.name=Type
+type.Customer.sdhTitle.name=Title
+type.Customer.nameOrg1.name=Name Org 1
+type.Customer.nameOrg2.name=Name Org 2
+type.Customer.nameOrg3.name=Name Org 3
+type.Customer.nameOrg4.name=Name Org 4
+type.Customer.addrressList.name=Addresses
+type.Customer.phoneList.name=Phones
+type.Customer.agentList.name=Agents
+type.Customer.networkList.name=Social Networks
+type.Customer.rolList.name=Rols
+type.Customer.exteriorPublicityTaxList.name=Exterior Publicity Tax List
+type.Customer.gasTaxList.name=Gas Tax List
+
+type.SDHAddress.name=Address
+type.SDHAddress.addKind.name=Type
+type.SDHAddress.street.name=Street
+type.SDHAddress.city.name=City
+type.SDHAddress.country.name=Country
+type.SDHAddress.region.name=Region
+
+type.SDHPhone.name=Phone
+type.SDHPhone.addKind.name=Type
+type.SDHPhone.phoneNumber.name=Number
+type.SDHPhone.extension.name=Extension
+
+type.SDHSocialNetwork.name=Social Network
+type.SDHSocialNetwork.socialNetwork.name=Social Network
+type.SDHSocialNetwork.username.name=Username
+
+type.SDHRol.name=Rol
+type.SDHRol.rol.name=Rol
+
+type.SDHExteriorPublicityTax.name=Exterior Publicity Tax
+type.SDHExteriorPublicityTax.resolutionNumber.name=Resolution Number
+type.SDHExteriorPublicityTax.fenceType.name=Fence type
+type.SDHExteriorPublicityTax.objectNumber.name=Object Number
+
+type.SDHAgent.name=Agent
+type.SDHAgent.documentNumber.name=Document Number
+type.SDHAgent.documentType.name=Document Type
+type.SDHAgent.completeName.name=Complete Name
+type.SDHAgent.internalFunction.name=Internal Function
 
 type.SDHCustomerRegistrationProcess.token.name=token
