--- a/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhcore/resources/localization/sdhcore-locales_es.properties
@@ -73,7 +73,9 @@ type.Gender.FEMALE.name=Femenino
 
 type.Customer.documentNumber.name=Número de Documento
 type.Customer.documentType.name=Tipo de Documento
+type.Customer.firstName.name=Primer Nombre
 type.Customer.middleName.name=Segundo Nombre
+type.Customer.secondLastName.name=Primer Apellido
 type.Customer.secondLastName.name=Segundo Apellido
 type.Customer.documentExpeditionDate.name=Fecha de Expedición del Documento
 type.Customer.sex.name=Sexo
@@ -85,4 +87,46 @@ type.Customer.useEmailForNotification.name=Usar Email Para Recibir Notificacione
 type.Customer.useInformationForInstitutionalPurposes.name=User Información para Fines Institucionales
 type.Customer.numBP.name=Num. BP
 
-type.SDHCustomerRegistrationProcess.token.name=token
+type.Customer.sdhType.name=Tipo
+type.Customer.sdhTitle.name=Título
+type.Customer.nameOrg1.name=Nombre Org 1
+type.Customer.nameOrg2.name=Nombre Org 2
+type.Customer.nameOrg3.name=Nombre Org 3
+type.Customer.nameOrg4.name=Nombre Org 4
+type.Customer.addrressList.name=Direcciones
+type.Customer.phoneList.name=Teléfonos
+type.Customer.agentList.name=Agentes
+type.Customer.networkList.name=Redes Sociales
+type.Customer.rolList.name=Roles
+type.Customer.exteriorPublicityTaxList.name=Impuestos de Publicidad Exterior
+type.Customer.gasTaxList.name=Impuestos de Gasolina
+
+type.SDHAddress.name=Dirección
+type.SDHAddress.addKind.name=Tipo
+type.SDHAddress.street.name=Calle
+type.SDHAddress.city.name=Ciudad
+type.SDHAddress.country.name=País
+type.SDHAddress.region.name=Región
+
+type.SDHPhone.name=Teléfono
+type.SDHPhone.addKind.name=Tipo
+type.SDHPhone.phoneNumber.name=Número
+type.SDHPhone.extension.name=Extensión
+
+type.SDHSocialNetwork.name=Red Social
+type.SDHSocialNetwork.socialNetwork.name=Red Social
+type.SDHSocialNetwork.username.name=Nombre de Usuario
+
+type.SDHRol.name=Rol
+type.SDHRol.rol.name=Rol
+
+type.SDHExteriorPublicityTax.name=Impuesto a publicidad Exterior
+type.SDHExteriorPublicityTax.resolutionNumber.name=Número de Resolución
+type.SDHExteriorPublicityTax.fenceType.name=Tipo de Valla
+type.SDHExteriorPublicityTax.objectNumber.name=Número de Objeto
+
+type.SDHAgent.name=Agente
+type.SDHAgent.documentNumber.name=Número de Documento
+type.SDHAgent.documentType.name=Tipo de Documento
+type.SDHAgent.completeName.name=Nombre Completo
+type.SDHAgent.internalFunction.name=Función Interna
