--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3782,7 +3782,8 @@ representantes.info.inicial.ica= Medios Magnéticos ICA
 
 representantes.info.predial.titulo= Carga de archivos Predial
 representantes.info.predial.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
-representantes.info.predial.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
+representantes.info.predial.pasos1= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 
+representantes.info.predial.pasos2= 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
 representantes.info.predial.numero= #
 representantes.info.predial.descripcion= Descripción
 representantes.info.predial.detalle= Detalle
@@ -3806,7 +3807,8 @@ representantes.info.predial.enviar= Enviar
 
 representantes.info.opain.titulo= Carga de archivos Predial - OPAIN
 representantes.info.opain.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
-representantes.info.opain.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
+representantes.info.opain.pasos1= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 
+representantes.info.opain.pasos2= 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
 representantes.info.opain.numero= #
 representantes.info.opain.descripcion= Descripción
 representantes.info.opain.detalle= Detalle
@@ -3820,7 +3822,8 @@ representantes.info.opain.enviar= Enviar
 
 representantes.info.ica.titulo= Carga de archivos ICA
 representantes.info.ica.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
-representantes.info.ica.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
+representantes.info.ica.pasos1= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 
+representantes.info.ica.pasos2= 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
 representantes.info.ica.numero= #
 representantes.info.ica.descripcion= Descripción
 representantes.info.ica.detalle= Detalle
@@ -3840,7 +3843,8 @@ representantes.info.ica.enviar= Enviar
 
 representantes.info.vehiculos.titulo= Carga de archivos Vehículos
 representantes.info.vehiculos.archivo= Teniendo en cuenta el impuesto seleccionado, debes cargar el archivo con la información correspondiente al artículo solicitado en la resolución que aparece en la siguiente línea:
-representantes.info.vehiculos.pasos= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
+representantes.info.vehiculos.pasos1= 1. Selecciona el Tipo de Archivo a cargar para establecer el formato. 
+representantes.info.vehiculos.pasos2= 2. Selecciona el archivo y da clic en el botón Cargar Archivo para iniciar el proceso
 representantes.info.vehiculos.numero= #
 representantes.info.vehiculos.descripcion= Descripción
 representantes.info.vehiculos.detalle= Detalle
