Ajustes de Menu para Reportantes y breadcrumbs

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -566,6 +566,10 @@ breadcrumb.not.found=Página no encontrada
 breadcrumb.miRIT=Mi RIT
 breadcrumb.certificacion=Certificación RIT
 breadcrumb.publicidad=Publicidad Exterior
+breadcrumb.reportante=Reportante
+breadcrumb.reportante.carga=Carga de Documentos
+breadcrumb.reportante.historico=Histórico de reportes
+breadcrumb.reportante.sanciones=Sanciones impuestas
 #->FIN dev-eduardo Pantalla de menu MiRIT->Certificacion 19/01/2019
 
 
