Certificacion de pagos

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1977,7 +1977,7 @@ delineacion.urbana.reports.accountStatement=Estado de Cuenta
 
 
 delineacion.urbana.detail.title=Detalle Delineación Urbana
-delineacion.urbana.detail.selectYear=Selecciona el año gavable a consultar
+delineacion.urbana.detail.selectYear=Selecciona el año gravable a consultar
 delineacion.urbana.detail.search=Buscar
 delineacion.urbana.detail.pedingObligations=Obligaciones pendientes
 delineacion.urbana.detail.pedingObligations.imporant=IMPORTANTE
@@ -2219,7 +2219,7 @@ predial.unificado.reports.accountStatement=Estado de Cuenta
 predial.unificado.massiveLiquidations.massiveLiquidations=Liquidaciones Masivas
 
 predial.unificado.detail.title=Detalle Predio
-predial.unificado.detail.selectYear=Selecciona el año gavable a consultar
+predial.unificado.detail.selectYear=Selecciona el año gravable a consultar
 predial.unificado.detail.search=Buscar
 predial.unificado.detail.pedingObligations=Obligaciones pendientes
 predial.unificado.detail.pedingObligations.imporant=IMPORTANTE
@@ -2302,7 +2302,7 @@ sobre.vehiculos.reports.accountStatement=Estado de Cuenta
 sobre.vehiculos.massiveLiquidations.massiveLiquidations=Liquidaciones Masivas
 
 
-sobre.vehiculos.detail.selectYear=Selecciona el año gavable a consultar
+sobre.vehiculos.detail.selectYear=Selecciona el año gravable a consultar
 sobre.vehiculos.detail.search=Buscar
 sobre.vehiculos.detail.pedingObligations=Obligaciones pendientes
 sobre.vehiculos.detail.pedingObligations.imporant=IMPORTANTE
@@ -2824,7 +2824,7 @@ publicidad.exterior.declarationpresent=Presentar Declaracion
 publicidad.exterior.rop=ROP
 publicidad.exterior.payonline=Pago en linea
 publicidad.exterior.detail.outdooradvertising=Detalle Publicidad Exterior
-publicidad.exterior.detail.selectYear=Selecciona el año gavable a consultar
+publicidad.exterior.detail.selectYear=Selecciona el año gravable a consultar
 publicidad.exterior.detail.search=Buscar
 publicidad.exterior.detail.basicdata=Datos Basicos
 publicidad.exterior.detail.return= Regresar
@@ -3504,7 +3504,7 @@ delineacion.urbana.payments.ROPGeneration=Generación de ROP
 delineacion.urbana.pago.linea=Pago en Línea
 
 delineacion.urbana.detail.title=Detalle Delineación Urbana
-delineacion.urbana.detail.selectYear=Selecciona el año gavable a consultar
+delineacion.urbana.detail.selectYear=Selecciona el año gravable a consultar
 delineacion.urbana.detail.selectperiod=Selecciona el Periodo
 delineacion.urbana.detail.search=Buscar
 delineacion.urbana.detail.regresar=Regresar
@@ -3927,3 +3927,54 @@ representantes.info.sanciones.vehiculos.visualizar= Visualizar
 representantes.info.sanciones.vehiculos.resolucion= Resolución No. DDI-040106
 representantes.info.sanciones.vehiculos.articulo1= Artículo 1
 representantes.info.sanciones.vehiculos.ver= Ver detalle
+
+certificacion.inicial.titulo= Certificaciones de Pago
+certificacion.inicial.tipo= Tipo de certificación
+certificacion.inicial.selcimpuesto= Impuesto
+certificacion.inicial.aniograv= Año Gravable
+certificacion.inicial.periodo= Periodo
+certificacion.inicial.cancelar= Cancelar
+certificacion.inicial.generar= Generar
+
+certificacion.inicial.predio.chip = CHIP
+certificacion.inicial.predio.matricula = Matrícula Inmobiliaría
+certificacion.inicial.predio.direccion = Dirección del Predio
+certificacion.inicial.predio.seleccionar = Seleccionar
+
+certificacion.inicial.vehiculo.placa= Placa
+certificacion.inicial.vehiculo.marca= Marca
+certificacion.inicial.vehiculo.seleccionar= Seleccionar
+
+certificacion.inicial.ica.tipdocu= Tipo de Documento
+certificacion.inicial.ica.numdocu= Número de Documento
+certificacion.inicial.ica.seleccionar= Seleccionar
+
+certificacion.inicial.publicidad.numresol= Número de Resolución
+certificacion.inicial.publicidad.tipvalla= Tipo de Valla
+certificacion.inicial.publicidad.seleccionar= Seleccionar
+
+obligacion.inicial.titulo= Certificaciones de Pago
+obligacion.inicial.tipo= Tipo de certificación
+obligacion.inicial.selcimpuesto= Impuesto
+obligacion.inicial.aniograv= Año Gravable
+obligacion.inicial.periodo= Periodo
+obligacion.inicial.cancelar= Cancelar
+obligacion.inicial.generar= Generar
+
+obligacion.inicial.predio.chip = CHIP
+obligacion.inicial.predio.matricula = Matrícula Inmobiliaría
+obligacion.inicial.predio.direccion = Dirección del Predio
+obligacion.inicial.predio.seleccionar = Seleccionar
+
+obligacion.inicial.vehiculo.placa= Placa
+obligacion.inicial.vehiculo.marca= Marca
+obligacion.inicial.vehiculo.seleccionar= Seleccionar
+
+obligacion.inicial.ica.tipdocu= Tipo de Documento
+obligacion.inicial.ica.numdocu= Número de Documento
+obligacion.inicial.ica.seleccionar= Seleccionar
+
+obligacion.inicial.publicidad.numresol= Número de Resolución
+obligacion.inicial.publicidad.tipvalla= Tipo de Valla
+obligacion.inicial.publicidad.seleccionar= Seleccionar
+
