--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3964,7 +3964,7 @@ certificacion.inicial.publicidad.numresol= Número de Resolución
 certificacion.inicial.publicidad.tipvalla= Tipo de Valla
 certificacion.inicial.publicidad.seleccionar= Seleccionar
 
-obligacion.inicial.titulo= Certificaciones de Pago
+obligacion.inicial.titulo= Obligaciones Pendientes
 obligacion.inicial.tipo= Tipo de certificación
 obligacion.inicial.selcimpuesto= Impuesto
 obligacion.inicial.aniograv= Año Gravable
