cambios en Consultas add Relacion de pagos y modificacion de estado de cuenta

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3989,3 +3989,56 @@ obligacion.inicial.publicidad.numresol= Número de Resolución
 obligacion.inicial.publicidad.tipvalla= Tipo de Valla
 obligacion.inicial.publicidad.seleccionar= Seleccionar
 
+
+relacion.inicial.titulo= Relación de Pagos
+relacion.inicial.tipo= Tipo de certificación
+relacion.inicial.selcimpuesto= Impuesto
+relacion.inicial.aniograv= Año Gravable
+relacion.inicial.periodo= Periodo
+relacion.inicial.cancelar= Cancelar
+relacion.inicial.generar= Generar
+
+relacion.inicial.predio.chip = CHIP
+relacion.inicial.predio.matricula = Matrícula Inmobiliaría
+relacion.inicial.predio.direccion = Dirección del Predio
+relacion.inicial.predio.seleccionar = Seleccionar
+
+relacion.inicial.vehiculo.placa= Placa
+relacion.inicial.vehiculo.marca= Marca
+relacion.inicial.vehiculo.seleccionar= Seleccionar
+
+relacion.inicial.ica.tipdocu= Tipo de Documento
+relacion.inicial.ica.numdocu= Número de Documento
+relacion.inicial.ica.seleccionar= Seleccionar
+
+relacion.inicial.publicidad.numresol= Número de Resolución
+relacion.inicial.publicidad.tipvalla= Tipo de Valla
+relacion.inicial.publicidad.seleccionar= Seleccionar
+
+edocuenta.inicial.titulo= Estado de Cuenta
+edocuenta.inicial.tipo= Tipo de certificación
+edocuenta.inicial.selcimpuesto= Impuesto
+edocuenta.inicial.aniograv= Año Gravable
+edocuenta.inicial.periodo= Periodo
+edocuenta.inicial.cancelar= Cancelar
+edocuenta.inicial.generar= Generar
+
+edocuenta.inicial.predio.chip = CHIP
+edocuenta.inicial.predio.matricula = Matrícula Inmobiliaría
+edocuenta.inicial.predio.direccion = Dirección del Predio
+edocuenta.inicial.predio.seleccionar = Seleccionar
+
+edocuenta.inicial.vehiculo.placa= Placa
+edocuenta.inicial.vehiculo.marca= Marca
+edocuenta.inicial.vehiculo.seleccionar= Seleccionar
+
+edocuenta.inicial.ica.tipdocu= Tipo de Documento
+edocuenta.inicial.ica.numdocu= Número de Documento
+edocuenta.inicial.ica.seleccionar= Seleccionar
+
+edocuenta.inicial.publicidad.numresol= Número de Resolución
+edocuenta.inicial.publicidad.tipvalla= Tipo de Valla
+edocuenta.inicial.publicidad.seleccionar= Seleccionar
+
+
+
