--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3938,3 +3938,9 @@ representantes.info.sanciones.vehiculos.visualizar= Visualizar
 representantes.info.sanciones.vehiculos.resolucion= Resolución No. DDI-040106
 representantes.info.sanciones.vehiculos.articulo1= Artículo 1
 representantes.info.sanciones.vehiculos.ver= Ver detalle
+
+
+pse.message.error.no.connection=Occurio un error con la conexión a PSE
+pse.message.info.done.transaction.with.status=Transacción realizada con estatus {0}
+pse.message.info.success.transaction=Transacción exitosa con código de rastreo {0}
+
