Modificaciones para sobretasa a gasolina (llamado a PSE) y Delineacion Urbana

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -1974,6 +1974,7 @@ delineacion.urbana.reports.paymentCertifications=Certificaciones de Pagos
 delineacion.urbana.reports.pendingDuties=Obligaciones Pendientes
 delineacion.urbana.reports.paymentRelation=Relación de Pagos
 delineacion.urbana.reports.accountStatement=Estado de Cuenta
+delineacion.urbana.nota = Para conocer el detalle de los Radicados agrupados en el Código de Delineación Urbana (C.D.U.), da clic en Ver de la columna correspondiente.
 
 
 delineacion.urbana.detail.title=Detalle Delineación Urbana
@@ -3481,6 +3482,7 @@ error.impuestoGasolina.sobretasa.error3.attrib7 = Error al leer calculo de gasol
 error.impuestoGasolina.sobretasa.error3.attrib8 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} 
 error.impuestoGasolina.sobretasa.error3.attrib9 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} {8} 
 error.impuestoGasolina.sobretasa.error3.attrib10 = Error al leer calculo de gasolina {0} {1} {2} {3} {4} {5} {6} {7} {8} {9} 
+error.impuestoGasolina.sobretasa.error4 = Error al leer información de delineación urbana {0}
 #->FIN dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
 #->INI dev-federico 11/02/2019 textos para Consulta de estado de cuenta
 consultas.estadoDeCuenta.tipoConsulta = Tipo:
@@ -3495,7 +3497,7 @@ consultas.estadoDeCuenta.generarEstadoCuenta = Generar
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
 
 delineacion.urbana.title=Deliación Urbana
-delineacion.urbana.desciption=Es la declaración y pago que se realiza cuando existe una construcción nueva o refacción de las existentes. El Impuesto de Delineación Urbana lo constituye la ejecución de obras o construcciones con licencia de construcción o reconocimiento. Más información.
+delineacion.urbana.desciption=Es la declaración y pago que se realiza cuando existe una construcción nueva o refacción de las existentes. El hecho generador del impuesto de Delineación Urbana lo constituye la ejecución de obras o construcciones con licencia de construcción o reconocimiento.
 delineacion.urbana.propertiesList=Listado de Predios Registrados
 delineacion.urbana.CDU=C.D.U
 delineacion.urbana.select=Seleccionar
@@ -3503,7 +3505,7 @@ delineacion.urbana.declaration=Presentar Declaración
 delineacion.urbana.payments.ROPGeneration=Generación de ROP
 delineacion.urbana.pago.linea=Pago en Línea
 
-delineacion.urbana.detail.title=Detalle Delineación Urbana
+delineacion.urbana.detail.title=Consultar años anteriores
 delineacion.urbana.detail.selectYear=Selecciona el año gavable a consultar
 delineacion.urbana.detail.selectperiod=Selecciona el Periodo
 delineacion.urbana.detail.search=Buscar
@@ -3517,12 +3519,19 @@ delineacion.urbana.basic.tipomarca= Tipo de marca
 delineacion.urbana.basic.marca=Marca
 delineacion.urbana.basic.numresoprorroga=Resolución prórroga
 delineacion.urbana.basic.fechrexpe=Fecha de expedición
-delineacion.urbana.basic.fechrevalida=Fecha de revalidación
+delineacion.urbana.basic.fechrevalida=Fecha revalidación
+delineacion.urbana.basic.totalPresupuesto=Total Presupuesto Obra/Construcción
+delineacion.urbana.basic.valorEjecutado=Valor Ejecutado Obra/Construcción
 delineacion.urbana.basic.fechfinobra=Fecha fin obra
+delineacion.urbana.basic.fechaInicioObra=Fecha Inicio Obra
+delineacion.urbana.basic.curaduria=Curaduría
+delineacion.urbana.basic.codigoEstrato=Código de Estrato
+delineacion.urbana.basic.detalleRadicado=Detalle Radicado
 delineacion.urbana.basic.fechresolprorroga=F.Resolución prórroga
 delineacion.urbana.basic.numradicado=Número radicado
 delineacion.urbana.basic.fechradicado=Fecha de radicado
 delineacion.urbana.basic.modaLicencia=Modalidad licencia
+delineacion.urbana.basic.numResolucionRevalidacion=No. Resolución Revalidación
 
 delineacion.urbana.adicionales.title=Datos Adicionales
 delineacion.urbana.adicionales.numradicado=Número de radicado
@@ -3537,8 +3546,8 @@ delineacion.urbana.adicionales.cantunida=Cantidad de Unidades
 delineacion.urbana.adicionales.areaunidad=Área por unidad
 
 delineacion.urbana.dec.generales.title=Datos Generales
-delineacion.urbana.dec.generales.anigrav=Año Gravable
-delineacion.urbana.dec.generales.periodo=Periodo
+delineacion.urbana.dec.generales.anigrav=Año Gravable: 
+delineacion.urbana.dec.generales.periodo=Periodo: 
 delineacion.urbana.dec.generales.cdu=CDU
 delineacion.urbana.dec.generales.opuso=Opciones de Uso
 
