PSE + Update Transaction + CronJob + Atom

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3940,6 +3940,6 @@ representantes.info.sanciones.vehiculos.ver= Ver detalle
 
 
 pse.message.error.no.connection=Occurio un error con la conexión a PSE
-pse.message.info.done.transaction.with.status=Transacción realizada con estatus {0}
-pse.message.info.success.transaction=Transacción exitosa con código de rastreo {0}
+pse.message.info.done.transaction.with.status=Transacción realizada con exito y pendiente de procesar
+pse.message.info.success.transaction=Transacción exitosa
 
