Cambio de etiqueta para sobretasa a gasolina (de localidad a municipio)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3459,6 +3459,7 @@ impuestos.sobreTasaGasolina.datosBasicos.capacAlmacTanques = Capacidad almacenaj
 impuestos.sobreTasaGasolina.datosBasicos.ubicacionPlantaAbasto = Ubicación planta abasto
 impuestos.sobreTasaGasolina.datosBasicos.codigoPostal = Código postal
 impuestos.sobreTasaGasolina.datosBasicos.localidad = Localidad
+impuestos.sobreTasaGasolina.datosBasicos.municipio = Municipio
 impuestos.sobreTasaGasolina.DatosGenerales.anioGravableConsultardisable= Año gravable
 impuestos.sobreTasaGasolina.DatosGenerales.Periododisable= Periodo
 
