Ajustes para menu contribuyentes

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -558,7 +558,7 @@ basket.configure.product=Configurar
 basket.select.product=Seleccionar
 
 breadcrumb.cart=Carro
-breadcrumb.home=Inicio
+breadcrumb.home=Iniciar sesión
 breadcrumb.login=Inicio de sesión
 breadcrumb.not.found=Página no encontrada
 
@@ -896,7 +896,7 @@ guest.register.submit=Registrar
 
 header.hello=Hola
 header.link.account=Mi cuenta
-header.link.login=Iniciar sesión / Registrarse
+header.link.login=Registrarse
 header.link.logout=Cerrar sesión
 header.mobile.link.login=Inicio de sesión
 header.welcome=Bienvenido/a, {0}.
