PSE + Debug Mode

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3740,7 +3740,7 @@ psePaymentForm.numeroDeReferencia=Número de referencia
 psePaymentForm.impuesto=Impuesto
 psePaymentForm.anoGravable=Año Grabable
 psePaymentForm.CHIP=CHIP
-psePaymentForm.periodo=Perido
+psePaymentForm.periodo=Período
 psePaymentForm.CUD=CUD
 psePaymentForm.noIdentificacion=No. identificación
 psePaymentForm.DV=DV
