--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4059,4 +4059,29 @@ pse.message.error.no.connection=Occurio un error con la conexión a PSE
 pse.message.info.done.transaction.with.status=Transacción realizada con exito y pendiente de procesar
 pse.message.info.success.transaction=Transacción exitosa
 
+certideclara.inicial.titulo= Certificaciones de Declaración
+certideclara.inicial.tipo= Tipo de certificación
+certideclara.inicial.selcimpuesto= Impuesto
+certideclara.inicial.aniograv= Año Gravable
+certideclara.inicial.periodo= Periodo
+certideclara.inicial.cancelar= Cancelar
+certideclara.inicial.generar= Generar
+
+certideclara.inicial.predio.chip = CHIP
+certideclara.inicial.predio.matricula = Matrícula Inmobiliaría
+certideclara.inicial.predio.direccion = Dirección del Predio
+certideclara.inicial.predio.seleccionar = Seleccionar
+
+certideclara.inicial.vehiculo.placa= Placa
+certideclara.inicial.vehiculo.marca= Marca
+certideclara.inicial.vehiculo.seleccionar= Seleccionar
+
+certideclara.inicial.ica.tipdocu= Tipo de Documento
+certideclara.inicial.ica.numdocu= Número de Documento
+certideclara.inicial.ica.seleccionar= Seleccionar
+
+certideclara.inicial.publicidad.numresol= Número de Resolución
+certideclara.inicial.publicidad.tipvalla= Tipo de Valla
+certideclara.inicial.publicidad.seleccionar= Seleccionar
+
 
