Ajustes en sobretasa a la gasolina (eliminar ceros a la izquierda, habilitar/deshabilitar boton pagar en linea, ) ajustes en pagina de pse (boton regresar, catalogo de periodos)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -2617,6 +2617,7 @@ sobretasa.gasolina.detail.name=Nombre
 sobretasa.gasolina.detail.verificationDigit=Digitó de verificación
 sobretasa.gasolina.detail.representaitonType=Tipo de representación
 
+
 login.not.a.robot=No soy un robot
 login.not.a.robot.exception=Por favor valida que no eres un robot
 login.not.a.validEmail.exception=Por favor, introduce un email válido
@@ -3427,6 +3428,7 @@ impuestos.decGasolina.Pago.GenerarDec = Generar Declaración
 impuestos.decGasolina.Pago.crearNuevaDec = Crear nueva Declaración
 impuestos.decGasolina.Pago.PresentarDec = Presentar Declaración
 impuestos.decGasolina.Pago.Pagar = Pagar en línea
+impuestos.decGasolina.Pago.Regresar = Regresar
 impuestos.decGasolina.Pago.nota = *Nota: Recordar que el pago de este impuesto, únicamente podrá ser pagado mediante el pago en línea
 
 #sobretasa a gasolina
