Cambio de estilo, presentar declaración

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3478,9 +3478,9 @@ impuestos.sobreTasaGasolina.representantes.regresar= Regresar
 impuestos.sobreTasaGasolina.representantes.detalleanteriores= Consulta tu detalle de periodos anteriores
 #->FIN dev-federico 17/01/2019 textos para Sobretasa Gasolina
 #->INI dev-federico 7/02/2019 textos para Presentar Declaración
-impuestos.presentarDeclaracion.impuesto = Impuesto*:
-impuestos.presentarDeclaracion.anioGravableConsultar = Año gravable*:
-impuestos.presentarDeclaracion.Periodo = Periodo*:
+impuestos.presentarDeclaracion.impuesto = Impuesto
+impuestos.presentarDeclaracion.anioGravableConsultar = Año gravable
+impuestos.presentarDeclaracion.Periodo = Periodo
 impuestos.presentarDeclaracion.PresentarDeclaracion = Presentar Declaración
 #->FIN dev-federico 7/02/2019 textos para Presentar Declaración
 #->INI dev-federico 7/02/2019 textos para Manejo de errores en sobre tasa a gasolina
