Modificaciones en pantalla de PSE respuesta. (agregar botones de imprimir comprobante y continuar, mostrar campos de fecha y hora)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3506,7 +3506,8 @@ consultas.estadoDeCuenta.Periodo = Periodo*:
 consultas.estadoDeCuenta.cancelar = Cancelar
 consultas.estadoDeCuenta.generarEstadoCuenta = Generar
 #->FIN dev-federico 11/02/2019 textos para Consulta de estado de cuenta
-
+impuestos.Pago.PSE.imprimirComprobante = Imprimir Comprobante
+impuestos.Pago.PSE.continuar = Continuar
 
 updatePwd.token.sameOldPassword=La nueva contraseña no puede ser igual a la anterior.
 
