Modificaciones en sobretasa a la gasoina(habilitar boton siempre de pagar en linea). Pagina PSE (cambiar etiquetas Credito y Gravable)

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3756,7 +3756,7 @@ predial.unificado.consulta.presdec= Presentar Declaración
 psePaymentForm.tipoDeImpuesto=Tipo de impuesto
 psePaymentForm.numeroDeReferencia=Número de referencia
 psePaymentForm.impuesto=Impuesto
-psePaymentForm.anoGravable=Año Grabable
+psePaymentForm.anoGravable=Año Gravable
 psePaymentForm.CHIP=CHIP
 psePaymentForm.periodo=Período
 psePaymentForm.CUD=CUD
