Vista para Lista de declaraciones a Firmar

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4087,4 +4087,10 @@ certideclara.inicial.publicidad.numresol= Número de Resolución
 certideclara.inicial.publicidad.tipvalla= Tipo de Valla
 certideclara.inicial.publicidad.seleccionar= Seleccionar
 
+declarafirma.inicial.titulo= Lista de Declaraciones a Firmar
+declarafirma.inicial.declara= Declaracion
+declarafirma.inicial.anigrav= Año Gravable
+declarafirma.inicial.periodo= Periodo
+declarafirma.inicial.seleccionar= Seleccionar
+declarafirma.inicial.firma= Firmar
 
