PSE + FIXED ISSUES + ERROR RESPONSE

--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -4061,6 +4061,7 @@ edocuenta.inicial.publicidad.seleccionar= Seleccionar
 pse.message.error.no.connection=Occurio un error con la conexión a PSE
 pse.message.info.done.transaction.with.status=Transacción realizada con exito y pendiente de procesar
 pse.message.info.success.transaction=Transacción exitosa
+pse.message.info.error.transaction.try.again=Transacción denegada, intente de nuevo
 
 certideclara.inicial.titulo= Certificaciones de Declaración
 certideclara.inicial.tipo= Tipo de certificación
