--- a/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
+++ b/hybris/hybris/bin/custom/sdh/sdhpsaddon/acceleratoraddon/web/webroot/WEB-INF/messages/base_es.properties
@@ -3764,6 +3764,7 @@ psePaymentForm.pagoAdicional=Pago adicional
 psePaymentForm.banco=Banco
 psePaymentForm.valorAPagar=Valor a pagar
 psePaymentForm.tipoDeTarjeta=Tipo de tarjeta
+psePaymentForm.trazabilityCode=Trazability Code
 
 mibuzon.inicial.title= Buzón Tributario
 mibuzon.inicial.descripcion= El Buzón Tributario te mantendrá al pendiente de todas las notificaciones y mensajes sobre tus obligaciones fiscales. Conoce el  Reglamento
